--- a/Atividades HTML & CSS/Criação do site da Hashtag/Criação do site/styles.css
+++ b/Atividades HTML & CSS/Criação do site da Hashtag/Criação do site/styles.css
@@ -76,6 +76,22 @@ input::placeholder {
   color: #757575;
 }
 
+.flex {
+  display: flex;
+
+  &.wrap {
+    flex-flow: row wrap;
+  }
+
+  &.col {
+    flex-flow: column;
+
+    &.wrap {
+      flex-flow: column wrap;
+    }
+  }
+}
+
 .secao {
   padding: 7.63rem 2rem;
 }
@@ -653,8 +669,9 @@ nav ul {
 /* Seção Blog */
 
 .container-blog {
-  display: flex;
-  flex-flow: row wrap;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 2.5rem;
   position: relative;
   background-color: #f9f9f9;
@@ -673,7 +690,6 @@ nav ul {
   display: flex;
   flex-flow: column;
   gap: 1.12rem;
-  flex: 1 1 40%;
   border-radius: 2.5rem;
   box-shadow: inset 0 0 0.4rem 0.15rem rgba(0, 0, 0, 0.15);
   padding: 2rem;
@@ -959,4 +975,98 @@ nav ul {
 
 .logo-whatsapp img {
   width: 100%;
+}
+
+/* popup */
+
+.popup-aberto {
+  & .popup {
+    display: flex;
+  }
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(15px);
+  z-index: 9999;
+
+  & .container {
+    position: relative;
+    width: 50rem;
+    background-color: black;
+    color: white;
+    overflow: hidden;
+    border-radius: 2.5rem;
+    border: 3px solid white;
+
+    & .imagem {
+      & img {
+        width: 100%;
+      }
+    }
+
+    & .restante {
+      padding: 2.5rem;
+      gap: 2.5rem;
+
+      & .textos {
+        text-align: justify;
+        gap: 1.6rem;
+      }
+
+      & form {
+        gap: 1.28rem;
+
+        & .botao {
+          &:link,
+          &:visited {
+            text-decoration: none;
+            color: inherit;
+            background-color: #ffac00;
+            border-radius: 0.8rem;
+            padding: 0.82rem 3.12rem;
+            font-weight: 700;
+            border: 0px solid #926100;
+            border-right-width: 3px;
+            border-bottom-width: 3px;
+          }
+
+          &:hover,
+          &:active {
+            border-width: 1.5px;
+          }
+        }
+      }
+    }
+
+    & .fechar {
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      right: 1rem;
+      top: 1rem;
+      width: 3.5rem;
+      height: 3.5rem;
+      border-radius: 50%;
+      background-color: white;
+      color: #303030;
+      border: 2px solid #303030;
+      font-weight: 700;
+      font-size: 1.92rem;
+
+      &:hover {
+        border-width: 1px;
+      }
+    }
+  }
 }
