--- a/Atividades HTML & CSS/Aula 1 Site de compra de TV/Do zero/styles.css
+++ b/Atividades HTML & CSS/Aula 1 Site de compra de TV/Do zero/styles.css
@@ -1,3 +1,10 @@
+:root {
+  --azul: #0588c4;
+  --azul-escuro: #035276;
+  --azul-claro: #78d4ff;
+  --laraja-avermelhado: #c44105;
+}
+
 * {
   margin: 0rem;
   padding: 0rem;
@@ -48,7 +55,7 @@ h1::first-letter {
 }
 
 a:hover {
-  color: #0588c4;
+  color: var(--azul);
 }
 
 h2 {
@@ -62,7 +69,7 @@ h3 {
 }
 
 ul {
-  color: #035276;
+  color: var(--azul-escuro);
   font-style: italic;
   font-size: 1.6rem;
   margin-bottom: 2.4rem;
@@ -79,7 +86,7 @@ li {
 }
 
 .Link_compra {
-  color: #c44105;
+  color: var(--laraja-avermelhado);
   font-weight: bolder;
   font-size: 2.4rem;
   text-decoration: double;
@@ -88,30 +95,30 @@ li {
 }
 
 .polegadas {
-  color: #0588c4;
+  color: var(--azul);
 }
 
 .desconto {
-  color: #0588c4;
+  color: var(--azul);
 }
 
 .Preço {
-  color: #0588c4;
+  color: var(--azul);
 }
 
 .Frete {
-  color: #0588c4;
+  color: var(--azul);
   text-decoration: solid;
   text-decoration-line: underline;
 }
 
 .juros {
-  color: #0588c4;
+  color: var(--azul);
 }
 
 .condicoes {
   display: inline-block;
-  background-color: #035276;
+  background-color: var(--azul-escuro);
   color: #fff;
   box-shadow: 0 0 1.6rem 0.4rem rgba(0, 0, 0, 0.15);
   padding: 2.4rem 3.2rem;
@@ -120,7 +127,7 @@ li {
 
 .condicoes .Frete,
 .condicoes .juros {
-  color: #78d4ff;
+  color: var(--azul-claro);
 }
 
 .logo-wpp {
